# solar-host

./: .env.example  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: formatting.yml  linting.yml  publish.yml  tests.yml
app/: config.py  main.py  memory_monitor.py  models_manager.py  process_manager.py  ws_client.py
app/backends/: llamacpp.py
app/models/: base.py  huggingface.py  llamacpp.py
app/routes/: instances.py
solar_host/: __init__.py  config.py  main.py  memory_monitor.py  models_manager.py  process_manager.py  ws_client.py
solar_host/backends/: __init__.py  base.py  huggingface.py  llamacpp.py
solar_host/models/: __init__.py  base.py  huggingface.py  llamacpp.py
solar_host/routes/: instances.py  models.py  websockets.py
solar_host/servers/: hf_server.py
solar_host/servers/deepseek_v4/: VENDORED.md  __init__.py
tests/: test_model_source_resolution.py  test_models_manager.py  test_pull.py  test_routes_models.py
