[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-host"
version = "0.0.0.dev"
description = "Process manager for model inference backends (llama.cpp, HuggingFace)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "DamitDev" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "python-socketio[asyncio_client]",
    "Pebble>=5.0.7",
    "psutil>=6.1.0",
    "harbor-oci-client>=0.1.0",
    "huggingface-hub>=1.10.1",
]

[project.optional-dependencies]
nvidia = ["nvidia-ml-py>=13.580.82"]
huggingface = [
    "torch>=2.5.0",
    # DeepSeek-V4 (`model_type: deepseek_v4`) support has not yet shipped in a
    # stable transformers release; pin to the open PR that adds the
    # `DeepseekV4ForCausalLM` modeling code.
    # See: https://github.com/huggingface/transformers/pull/45643
    "transformers @ git+https://github.com/huggingface/transformers.git@refs/pull/45643/head",
    "accelerate>=1.0.0",
    # macOS only: register float8_e4m3fn / float8_e5m2 / float4_e2m1fn_x2 plus
    # torch._scaled_mm on MPS via Metal shaders, so transformers' FP8 quantizer
    # can keep DeepSeek-V4 weights in FP8 instead of dequantizing to bf16.
    # https://pypi.org/project/fp4-fp8-for-torch-mps/
    "fp4-fp8-for-torch-mps>=1.0.0; sys_platform == 'darwin'",
]
all = ["solar-host[nvidia,huggingface]"]
dev = ["pytest>=9.0"]

[project.scripts]
solar-host = "solar_host.main:run"

[project.urls]
Homepage = "https://github.com/DamitDev/solar-host"
Repository = "https://github.com/DamitDev/solar-host"
Issues = "https://github.com/DamitDev/solar-host/issues"

[tool.hatch.metadata]
# Required for direct-URL dependencies (e.g. `transformers @ git+https://...`
# pinned to an open PR for DeepSeek-V4 support). Hatchling rejects PEP 508
# direct references by default.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["solar_host"]
